tests/integration/snapshots/test_compile_undefined_symbol.stdout.txt
  Compiling contracts/undefined.tolk
✗ Compilation failed [ROOT]/contracts/undefined[LINE]: error: undefined symbol `nonexistent`

    // in function `onInternalMessage`
   3 |                 val x = nonexistent();
     |                         ^^^^^^^^^^^

